--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-remote_theme: pages-themes/dinky@v0.2.0
+remote_theme: pages-themes/leap-day@v0.2.0
 title: UHS MRI Physics Team Journal Lounge
 description: Collect journal contents for the MRI Physics Team at University Hospial Southampton NHS Foundation Trust
